--- a/JCashMachineThailand/Views/Details/Products.cshtml
+++ b/JCashMachineThailand/Views/Details/Products.cshtml
@@ -8,7 +8,7 @@
     <img class="img-header" src="~/Images/product-header.jpg" />
     <div class="text-header"> PRODUCTS </div>
 </div>
-<div class="hr-1"></div>
+<div class="hr-1 bg-jcm-blue"></div>
 
 <div class="container card-columns bg-light px-md-4 pt-5">
     @if (Model != null)
