--- a/JCashMachineThailand/Views/Details/Service.cshtml
+++ b/JCashMachineThailand/Views/Details/Service.cshtml
@@ -8,7 +8,7 @@
     <img class="img-header img-rotate-180" src="~/Images/service-header.jpg" />
     <div class="text-header"> SERVICES </div>
 </div>
-<div class="hr-1" ></div>
+<div class="hr-1 bg-jcm-blue" ></div>
 
 <div class="card border-0 text-center p-5 mb-5">
     @if (Model != null)
@@ -23,7 +23,17 @@
     {
         <p>Our service will be provided soon.</p>
     }
+    <!-- Contact Thailand Distributor -->
+    <hr />
+    <h3 class="text-info">How to get our service?</h3>
+    <p class="text-black-50">
+        To request our service, we have our distributors in your area to provide you by regions.<br />
+        <a class="btn btn-success m-2" href="/home/about" role="button">
+            <span class="fa fa-fw fa-search"></span>Find our distributor
+        </a>
+    </p>
 </div>
 
 <!-- Import Page Stylesheet -->
 <link rel="stylesheet" type="text/css" href="~/Content/custom.details.css" />
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
