--- a/JCashMachineThailand/Content/custom.index.css
+++ b/JCashMachineThailand/Content/custom.index.css
@@ -1,6 +1,6 @@
 ﻿body{
     width:100%;
-    max-width:1600px;
+    /*max-width:1600px;*/
 }
 .background-parallax {
     /* Image */
@@ -29,7 +29,7 @@
 }
 
 .headerText {
-    color: #005DA3; /* JCM:#003862 */
+    /*color: #005DA3;*/ /* JCM:#003862 */
     position: absolute;
     /*font-family: Arial, Helvetica, sans-serif;*/
     font-family: poppins-semibold,poppins,sans-serif;
@@ -44,7 +44,6 @@
 }
 
 .subHeaderText {
-    color: white;
     position: absolute;
     font-weight: 200;
     /*font-family: Arial, Helvetica, sans-serif;*/
@@ -124,17 +123,6 @@
 
 .font-smoothing {
     -webkit-font-smoothing: antialiased;
-}
-
-.bg-jcm-blue {
-    background-color: #005DA3;
-}
-.color-jcm-blue { /*JCM from .Ai = #005DA3*/
-    /*color: #003862;*/
-    color: #005DA3;
-}
-.bg-jcm-contact {
-    background-color: #EAF5F7;
 }
 
 #introduce {
