--- a/JCashMachineThailand/Views/Home/About.cshtml
+++ b/JCashMachineThailand/Views/Home/About.cshtml
@@ -1,12 +1,98 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About us";
 }
 
 
-<div class="container">
-    <h2>@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
+<div class="container-header">
+    <img class="img-header" src="~/Images/about-company.jpg" />
+    <div class="text-header"> @ViewBag.Title </div>
+</div>
+<div class="hr-1 bg-jcm-blue"></div>
 
-    <p>Use this area to provide additional information.</p>
+
+<div class="card border-0 text-center p-3 mb-3">
+    <!-- Company Background -->
+    <h2 class="card-subtitle text-dark mt-2 mb-2">History</h2>
+    <p class="card-text text-black-50 mb-5">
+        <span class="font-weight-bold">J-Cash Machine(Thailand) Co.,Ltd.</span> established since 2007 to develop software for Bill Validator (Banknotes Acceptor)
+        products of <span class="font-italic">Japan Cash Machine Co.,Ltd.(JCM)</span><br />
+        We served over hundred of currency, build over 200 software yearly.
+        Cooperate development with other JCM group office in Japan(Tokyo/Osaka), USA(Lasvegas), Germany(Dusseldorf) and many more world wide support team.
+    </p>
+</div>
+    <!-- Distributor -->
+<div class="card border-0 text-center p-3 mb-3 bg-light">
+    <h2 class="card-subtitle text-dark mt-2 mb-2">Distributor</h2>
+    <div class="card-text text-black-50 mb-5">
+        <table id="distributor" class="display nowrap w-100 border-0">
+            <thead>
+                <tr class="bg-light">
+                    <th>Country</th>
+                    <th>Name</th>
+                    <th>Contact</th>
+                    <th>Address</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Thailand</td>
+                    <td>Retailing Technology Co., Ltd.<br /> ( RTECH )</td>
+                    <td>info@rtech.co.th <br />(+66)2-363-7502-7</td>
+                    <td><a href="http://www.rtech.co.th">www.rtech.co.th</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 
+    <!-- Customer -->
+<div class="card border-0 text-center p-3 mb-3">
+    <h2 class="card-subtitle text-dark mt-2 mb-2">Customer</h2>
+    <p>The example our Thailand customer show below.</p>
+    <div id="customerList" class="card-columns">
+        <div class="card">
+            <img src="~/Images/customer/ais.jpg" class="card-img-top" alt="ais" />
+        </div>
+        <div class="card">
+            <img src="~/Images/customer/dtac.jpg" class="card-img-top" alt="dtac" />
+        </div>
+        <div class="card">
+            <img src="~/Images/customer/true.png" class="card-img-top" alt="true" />
+        </div>
+        <div class="card  mb-5">
+            <img src="~/Images/customer/pea.png" class="card-img-top" alt="pea" />
+        </div>
+        <div class="card">
+            <img src="~/Images/customer/scb.jpg" class="card-img-top" alt="scb" />
+        </div>
+        <div class="card">
+            <img src="~/Images/customer/mrt.png" class="card-img-top" alt="mrt" />
+        </div>
+        <div class="card">
+            <img src="~/Images/customer/powergold.png" class="card-img" alt="powergold" />
+        </div>
+    </div>
+</div>
+    <!-- Import Page Stylesheet -->
+    <link rel="stylesheet" type="text/css" href="~/Content/custom.details.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css" />
+
+    @section scripts{
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+        <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+
+        <script>
+            $.extend($.fn.dataTable.defaults, {
+                responsive: true
+            });
+
+            $(document).ready(function () {
+                $('#distributor').DataTable({
+                    "paging": false,
+                    "ordering": false,
+                    "info": false
+                });
+            });
+        </script>
+    }
