Update Contents: - contact email to support@jcm-thai.co.th - home contents folloing Kuroiwa needs. - corrected typo of Career.cshtml

--- a/JCashMachineThailand/Views/Details/Career.cshtml
+++ b/JCashMachineThailand/Views/Details/Career.cshtml
@@ -30,7 +30,7 @@
                     <td>Software Engineer</td>
                     <td>
                         <ul style="text-align:left">
-                            <li>Software and related softare development of "Bill Acceptor" that discern Banknote of all over the world.</li>
+                            <li>Software and related software development of "Bill Acceptor" that discern Banknote of all over the world.</li>
                             <li>Design, develop and maintain software various product of JCM.</li>
                         </ul>
                     </td>
