--- a/JCashMachineThailand/Views/Home/Contact.cshtml
+++ b/JCashMachineThailand/Views/Home/Contact.cshtml
@@ -20,7 +20,7 @@
                             Sukhumvit Rd., Prakanong Klongtoey,<br />
                             Bangkok 10110 Thailand<br />
                             <br />
-                            <a href="mailto:t.sarawoot@jcm-thai.co.th">t.sarawoot@jcm-thai.co.th</a><br />
+                            <a href="mailto:support@jcm-thai.co.th">support@jcm-thai.co.th</a><br />
                             <br />
                             Tel. +66 2 712 3155-6<br />
                             Fax. +66 2 712 3157
