--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -19,10 +19,10 @@
             <div class="container-fluid text-white">
                 <h1 id="whoweare" class="font-smoothing" style="font-weight:bold">Who We Are?</h1>
                 <p class="p-15 p-3">
-                    J-CASH MACHINE(THAILAND) CO.,LTD. is subsidiary of JAPAN CASH MACHINE CO.,LTD.
-                    established since 2007 to develop software for Bill Validator (Banknotes Acceptor)
-                    under the "JCM" brand, we produce embedded software to recognize variety of banknotes series in world wide currency.
-                    provide JCM Bill Validator in both gamming and commercial market match the need of our customer.
+                    J-Cash Machine (Thailand) Co., LTD has developed software for various products related to
+                    money handling as a subsidiary of Japan Cash Machine Co., LTD in Bangkok Thailand since 2007.
+                    As an expert in money handling, we provide software to validate notes around the world
+                    as well as our products for a wide range of markets.
                 </p>
             </div>
         </section>
@@ -39,8 +39,7 @@
                             <h3 class="card-title color-jcm-blue mb-3">Product</h3>
                             <h5 class="card-subtitle mb-3">Bill Acceptor</h5>
                             <p class="card-text">
-                                Over 60 years of JCM, we proudly present high quality product from Japan and
-                                alway going forward improve our product with high technology.
+                                Click here for product lineup related to money handling.
                             </p>
                             <span class="nav-item">@Html.ActionLink("Check out!", "Products", "Details", null, new { @class = "btn btn-info" })</span>
                         </div>
@@ -53,8 +52,7 @@
                             <h3 class="card-title color-jcm-blue mb-3">Service</h3>
                             <h5 class="card-subtitle mb-3">Professional Team Service </h5>
                             <p class="card-text">
-                                More than decade, we created over thousand quality firmware to the market and
-                                assists technical information to the global market by professional team.
+                                Contact for inquiries related to our products.
                             </p>
                             <span class="nav-item">@Html.ActionLink("See more", "Service", "Details", null, new { @class = "btn btn-info" })</span>
                         </div>
@@ -67,7 +65,7 @@
                             <h3 class="card-title color-jcm-blue mb-3">Career</h3>
                             <h5 class="card-subtitle mb-3">Together at JCM-T</h5>
                             <p class="card-text">
-                                The machine cannot work by itself, so we need strong teamwork to drive it into global money handling.
+                                Click here for recruit information of J-Cash Machine (Thailand) Co., LTD.
                             </p>
                             <span class="nav-item">@Html.ActionLink("Join us", "Career", "Details", null, new { @class = "btn btn-info" })</span>
                         </div>
@@ -90,7 +88,7 @@
                             Sukhumvit Rd., Prakanong Klongtoey,<br />
                             Bangkok 10110 Thailand<br />
                             <br />
-                            <a href="mailto:t.sarawoot@jcm-thai.co.th">t.sarawoot@jcm-thai.co.th</a><br />
+                            <a href="mailto:support@jcm-thai.co.th">support@jcm-thai.co.th</a><br />
                             <br />
                             Tel. +66 2 712 3155-6<br />
                             Fax. +66 2 712 3157
