remote sub-header

--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                         <img class="card-img" src="~/Images/product.jpg" />
                         <div class="card-body">
                             <h3 class="card-title color-jcm-blue mb-3">Product</h3>
-                            <h5 class="card-subtitle mb-3">Bill Acceptor</h5>
+                            @*<h5 class="card-subtitle mb-3">Bill Acceptor</h5>*@
                             <p class="card-text">
                                 Click here for product lineup related to money handling.
                             </p>
@@ -50,7 +50,7 @@
                         <img class="card-img" src="~/Images/service.jpg" />
                         <div class="card-body">
                             <h3 class="card-title color-jcm-blue mb-3">Service</h3>
-                            <h5 class="card-subtitle mb-3">Professional Team Service </h5>
+                            @*<h5 class="card-subtitle mb-3">Professional Team Service </h5>*@
                             <p class="card-text">
                                 Contact for inquiries related to our products.
                             </p>
@@ -63,7 +63,7 @@
                         <img class="card-img" src="~/Images/Career.jpg" />
                         <div class="card-body">
                             <h3 class="card-title color-jcm-blue mb-3">Career</h3>
-                            <h5 class="card-subtitle mb-3">Together at JCM-T</h5>
+                            @*<h5 class="card-subtitle mb-3">Together at JCM-T</h5>*@
                             <p class="card-text">
                                 Click here for recruit information of J-Cash Machine (Thailand) Co., LTD.
                             </p>
