modify change following manager request - JCM-Thailand website.docx

--- a/JCashMachineThailand/Content/Site.css
+++ b/JCashMachineThailand/Content/Site.css
@@ -42,3 +42,7 @@ textarea {
     transition:1s;
     z-index:500;
 }
+
+.manager-remove{
+    display:none;/* order to removed by jcm-t manager*/
+}
