--- a/JCashMachineThailand/Views/Details/Career.cshtml
+++ b/JCashMachineThailand/Views/Details/Career.cshtml
@@ -30,25 +30,31 @@
                     <td>Software Engineer</td>
                     <td>
                         <ul style="text-align:left">
-                            <li>Software and related software development of "Bill Acceptor" that discern Banknote of all over the world.</li>
-                            <li>Design, develop and maintain software various product of JCM.</li>
+                            <li> Software development of discernment machine that discern Banknote of all over the world.</li>
+                            <li> Design, develop and maintain software for various products of JCM.                      </li>
+                            <li> Embedded System Programing.                                                             </li>
+                            <li> Development of PC applications for software development.                                </li>
+                            <li> Development of other PC applications.                                                   </li>
                         </ul>
                     </td>
                     <td>
                         <ul style="text-align:left">
-                            <li>Above 23 years old</li>
-                            <li>1 Year of workig experiences in software development is perferred</li>
-                            <li>Fresh graduates are also welcomed.</li>
-                            <li>Posseses skill in C Programming</li>
-                            <li>Bechelor Degree inElectrical Engineering , Eletronics Engineering , ComputerEngineering Computer Science or related field</li>
-                            <li>Thai only</li>
-                            <li>English proficiencey is conversation level is perferred.</li>
-                            <li>Machanic/Electronic engineer is welcome.</li>
+                            <li> Thai Nationality</li>
+                            <li> Female, Male.</li>
+                            <li> Age above 23 years old. Fresh graduates are also welcomed.</li>
+                            <li> Graduation Bachelor Degree in Electrical Engineering, Electronics Engineering, Computer Engineering,Computer Science or related field</li>
+                            <li> Programming skill C language.</li>
+                            <li> English Proficiency in conversation level is preferred</li>
                         </ul>
                     </td>
                 </tr>
             </tbody>
         </table>
+    </div>
+    <hr />
+    <div class="alert-light" role="alert">
+        <h5>Social Welfare</h5>
+        <span class="font-smoothing">Social Insurance; Health Insurance; Medical Expense; Transport Allowance; Overtime Allowance, Provident fund, Company Bonus</span>
     </div>
 </div>
 
