--- a/JCashMachineThailand/Views/Home/Contact.cshtml
+++ b/JCashMachineThailand/Views/Home/Contact.cshtml
@@ -69,7 +69,7 @@
                 zoom: 17,
                 center: myLatlng,
                 //mapTypeId: 'satellite'
-                mapTypeId: 'hybrid'
+                mapTypeId: 'terrain'
             };
             // The map, centered at Uluru
             var map = new google.maps.Map(mapCanvas, mapOptions);
