--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -24,6 +24,7 @@
                     As an expert in money handling, we provide software to validate notes around the world
                     as well as our products for a wide range of markets.
                 </p>
+                <span class="nav-item mt-2">@Html.ActionLink("About us", "About", "Home", null, new { @class = "btn btn-info" })</span>
             </div>
         </section>
     </div>
