--- a/JCashMachineThailand/Views/Shared/_Layout.cshtml
+++ b/JCashMachineThailand/Views/Shared/_Layout.cshtml
@@ -28,9 +28,9 @@
         <div class="collapse navbar-collapse" id="navMenu">
             <ul class="navbar-nav ml-auto mr-1">
                 <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
-                <li class="nav-item">@Html.ActionLink("Product", "Products", "Details", null, new { @class = "nav-link" })</li>
+                <li class="nav-item manager-remove">@Html.ActionLink("Product", "Products", "Details", null, new { @class = "nav-link" })</li>
 
-                <li class="nav-item dropdown ">
+                <li class="nav-item dropdown manager-remove">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
                         <span class="caret">About</span>
                     </a>
